styles/globals.css
@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
@import url('https://fonts.googleapis.com/css2?family=Alegreya+Sans+SC:wght@500&display=swap');
:root {
  --primary-color: #ff7100;
  --dark-color: #000000b2;
  --secondary-color: #2854eecc;
  --dark-mode: #1c2128;
  --box-color: #1f242b;

  --clr-background-1: #ffffff;
  --clr-background-2: #eef2f8;
  --clr-foreground-1: #1c2128;

  --border-color-1: #1c2128;
  --clr-filler-1: #000000;
  --clr-border-1: #959595;

  --clr-primary-1: #ff7100;

  --clr-gray-1: #d1d5db;

  --boxshadow-1: hsl(0, 0%, 90%) 0px 0px 0px 1px;
}

.dark {
  --clr-background-1: #0c0e11;
  --clr-background-2: #1b2c43;
  --clr-foreground-1: #ffffff;

  --border-color-1: #4e4e4e;
  --clr-filler-1: #656565;
  --clr-border-1: #4e4e4e;

  --clr-primary-1: #ff7100;

  --clr-gray-1: #374151;

  --boxshadow-1: hsl(212, 19%, 17%) 0px 0px 0px 1px;
}

body {
  font-family: 'Poppins', sans-serif;
}

@tailwind base;
@tailwind components;
@tailwind utilities;

.active {
  @apply border-b-[3px] border-b-secondary-color;
}
.hover-overlay {
  @apply rounded-full bg-gray-500;
}

/* Hide scrollbar for Chrome, Safari and Opera */
.scroll-hide::-webkit-scrollbar {
  display: none;
}

/* Hide scrollbar for IE, Edge and Firefox */
.scroll-hide {
  -ms-overflow-style: none; /* IE and Edge */
  scrollbar-width: none; /* Firefox */
}

.file-uploader {
  height: 100% !important;
  width: 100% !important;
  position: absolute !important;
  top: 0 !important;
  left: 0 !important;
  max-width: unset !important;
}

.file-uploader > div {
  text-align: center !important;
  align-items: center !important;
  justify-content: center !important;
}

.file-uploader > svg {
  display: none !important;
}

